--- a/desafios/d011/index.html
+++ b/desafios/d011/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>C<small>ORDEL</small> M<small>ODERNO</small></h1>
+        <h1>Cordel Moderno</h1>
         <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743"><strong>Milton Duarte</strong></a></p>
     </header>
     <main>
